--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
     <div class="container">
-        <h1>Generate a<br><span >Random Password</span></h1>
+        <h1>Generate a<br><span >Random Password Generate</span></h1>
         <div class="display">
             <!-- <input type="text" id="password" placeholder="password"> -->
             <input type="text" [value]="inputval" placeholder="password"  #textInput value="Text to copy">      
